# umst-prototype

./: .gitignore  Dockerfile  LICENSE  README.md  REPRODUCIBILITY_README.md  requirements.txt
.github/workflows/: ci.yml
data/: calibration_config.json  dataset_D1.csv  dataset_D2.csv  dataset_D3.csv  dataset_D4.csv  dataset_full.csv  pareto_front.json
docs/: 1_Overview.md  2_Directory_Structure.md  3_Setup_Guide.md  4_Reproduction_Guide.md  5_Technical_Methodology.md  6_Evaluation_Protocol.md  7_Supplementary_Materials.md  8_Advanced_Rust_Experiments.md  9_Constitutional_Creativity.md  GATE_SERVER.md  THIN_PROTOTYPES_PATH_DEPS.md  THIN_PROTOTYPE_STATUS.md
results/ssot/: design_benchmark_latest.json  fair_comparison_2026-01-28.json
ros2_bridge/: README.md  package.xml  setup.cfg  setup.py
ros2_bridge/config/: bridge_params.yaml
ros2_bridge/launch/: umst_bridge.launch.py
ros2_bridge/msg/: GateDecision.msg  UMSTState.msg
ros2_bridge/srv/: GateCheck.srv
ros2_bridge/umst_ros2_bridge/: gate_bridge_node.py  robot_controller_node.py  telemetry_bridge_node.py
scripts/: __init__.py  baseline_gnn.py  baseline_pinn.py  benchmark_generative.sh  benchmark_predictive.py  calibrate_physics.py  plot_results.py  pre_generate_predictions.py  utils_metrics.py
src/rust/.cargo/: config.toml.example
src/rust/core/: Cargo.toml  clippy.toml  mock_llm_server.py
src/rust/core/src/: formulas.rs  lib.rs  manifold_gate_shim.rs  physics_kernel.rs  project.rs  safety.rs  tests_physics.rs
src/rust/core/src/io/: llm_client.rs
src/rust/core/src/optimization/: mod.rs  monte_carlo.rs  topology.rs
src/rust/core/src/rl/: concrete_provider.rs  guardrails.rs  mod.rs  ppo.rs  reward.rs  state.rs  traits.rs
src/rust/core/src/science/: chemo_water.rs  colloidal.rs  cost.rs  fracture.rs  itz.rs  materials.rs  maturity.rs  mod.rs  porosity.rs  rheology.rs  strength.rs  sustainability.rs  thermo.rs  thermodynamic_filter.rs  transport.rs
src/rust/core/src/tensors/: functor.rs  geometry.rs  hyper_graph_tensor.rs  kleisli.rs  mix.rs  mod.rs  sparse.rs
tools/: diagnostics.py  run_experiments.py  setup_env.py  test_gpu.py  test_platform.sh  test_reliability.py  test_rust_kernel.py  verify_install.sh
