<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>umst_ros2_bridge</name>
  <version>1.0.0</version>
  <description>
    ROS2 bridge for the UMST thermodynamic gate and physics kernel.
    Connects the Rust gate server (REST/WebSocket) to the ROS2 ecosystem,
    enabling physics-gated robotic fabrication with real-time admissibility
    enforcement via the Clausius-Duhem inequality.
  </description>

  <maintainer email="santhosh@tyto.studio">Santhosh Shyamsundar</maintainer>
  <maintainer email="santosh@tyto.studio">Santosh Prabhu Shenbagamoorthy</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rosidl_default_generators</depend>
  <depend>rosidl_default_runtime</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
