[package]
name = "umst-core"
version = "0.1.0"
edition = "2021"
authors = ["Santhosh Shyamsundar", "Prabhu S.", "Studio Tyto"]
description = "Physics-Informed core for Unified Material-State Tensor research."
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
petgraph = { version = "0.6", features = ["serde-1"] }
nalgebra = { version = "0.32", features = ["serde-serialize"] }
parry3d = "0.13"
wasm-bindgen = "0.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
# burn = { version = "0.12.1", features = ["wgpu", "train"] }
# burn-ndarray = "0.12.1"
# bincode = { version = "2.0.0-rc.3", features = ["serde"] }
rand = "0.8"

instant = "0.1"
serde-wasm-bindgen = "0.6"
csv = "1.2"
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "gate_server"
path = "src/bin/gate_server.rs"


